Styles updated. '.noselect' selector added, 'cursor: pointer' applied to 'table' selector.

--- a/css/tic-tac-toe.css
+++ b/css/tic-tac-toe.css
@@ -2,6 +2,7 @@
 	border: 3px solid black;
 	border-collapse: collapse;
 	margin: 100px auto;
+	cursor: pointer;
 }
 
 table tr td {
@@ -9,4 +10,14 @@ table tr td {
 	width: 100px;
 	height: 100px;
 	text-align: center;
+}
+
+.noselect {
+	-webkit-touch-callout: none; /* iOS Safari */
+	  -webkit-user-select: none; /* Safari */
+	   -khtml-user-select: none; /* Konqueror HTML */
+		 -moz-user-select: none; /* Firefox */
+		  -ms-user-select: none; /* Internet Explorer/Edge */
+			  user-select: none; /* Non-prefixed version, currently
+									supported by Chrome and Opera */
 }
